# weather_routing_pi

./: CMakeLists.txt  README.md  bldwin-rdeb.sh
.circleci/: config.yml
cmake/in-files/: cloudsmith-upload.sh.in
include/: AboutDialog.h  Boat.h  BoatDialog.h  ChargeSource.h  ConfigurationBatchDialog.h  ConfigurationDialog.h  ConstraintChecker.h  EditPolarDialog.h  FilterRoutesDialog.h  GribRecord.h  GribRecordSet.h  IsoRoute.h  LineBufferOverlay.h  PlotDialog.h  Polar.h  PolygonRegion.h  Position.h  ReportDialog.h  RouteMap.h  RouteMapOverlay.h  RoutePoint.h  RouteSimplifier.h  RoutingTablePanel.h  SettingsDialog.h  StatisticsDialog.h  SunCalculator.h  Utilities.h  WeatherDataProvider.h  WeatherRouting.h  WeatherRoutingUI.h  cutil.h  georef.h  icons.h  navobj_util.h  weather_routing_pi.h  wx28compat.h  zconf.h  zlib.h  zuFile.h
manual/: site-all.yml
manual/modules/ROOT/pages/: developer_guide.adoc  help_information.adoc  index.adoc  polar_file_conversion.adoc
po/: POTFILES.in  POTFILES.in.test  ar_SA.po  bg_BG.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_GB.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.po  gl_ES.po  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  vi_VN.po  weather_routing_pi.pot  zh_CN.po  zh_TW.po
src/: AboutDialog.cpp  Boat.cpp  BoatDialog.cpp  ConfigurationBatchDialog.cpp  ConfigurationDialog.cpp  ConstraintChecker.cpp  EditPolarDialog.cpp  FilterRoutesDialog.cpp  GribRecord.cpp  IsoRoute.cpp  LineBufferOverlay.cpp  PlotDialog.cpp  Polar.cpp  PolygonRegion.cpp  Position.cpp  ReportDialog.cpp  RouteMap.cpp  RouteMapOverlay.cpp  RoutePoint.cpp  RouteSimplifier.cpp  RoutingTablePanel.cpp  SailboatTransform.cpp  SettingsDialog.cpp  StatisticsDialog.cpp  SunCalculator.cpp  Utilities.cpp  WeatherDataProvider.cpp  WeatherRouting.cpp  WeatherRoutingUI.cpp  cutil.cpp  georef.c  georef.cpp  icons.cpp  navobj_util.cpp  weather_routing_pi.cpp  zuFile.cpp
test/: AStarSolver_tests.cpp  CMakeLists.txt  Polar_tests.cpp  PolygonRegion_tests.cpp  Utilities_tests.cpp  mock_plugin_api.cpp  mock_plugin_api.h  mock_plugin_impl.cpp
